<resources>
    <string name="app_name">MSPシステム</string>
    <string name="app_compay">株式会社ムロオシステムズ</string>

    <string name="tool_bat_menu_1">設定</string>
    <string name="tool_bat_menu_2">ログアウト</string>

    <string name="menu_name1">支払</string>
    <string name="menu_name2">返金</string>
    <string name="menu_name3">支払一覧</string>
    <string name="menu_name4">返金一覧</string>

    <string name="head_title_name1">ログイン</string>
    <string name="head_title_name2">MurooSystems Pay</string>

    <string name="head_title_name3">支払処理</string>
    <string name="head_title_name4">返金処理</string>

    <string name="head_title_name5">支払結果</string>
    <string name="head_title_name6">返金結果</string>

    <string name="head_title_name7">支払一覧</string>
    <string name="head_title_name8">返金一覧</string>

    <string name="head_title_name9">支払照会</string>
    <string name="head_title_name10">返金照会</string>

    <string name="lab_list_startDate">開始時刻:</string>
    <string name="lab_list_endDate">終了時刻:</string>

    <string name="lab_userid">ユーザーID:</string>
    <string name="lab_possword">パスワード:</string>
    <string name="chk_possword_visable">パスワードを表示します</string>
    <string name="btn_login">ログイン</string>
    <string name="btn_clear">クリア</string>

    <string name="permission_read_phone_state_rationale">携帯のデバイスID情報を読み込む事を許可してよろしいでしょうか。</string>
    <string name="permissions_not_granted_read_phone_state">携帯のデバイスID情報を読み込む事ができません。</string>

    <string name="app_info">AliPayとWeChatPayが使えます「MSP」</string>

    <string name="msg_title1">エラー</string>
    <string name="msg_title2">メッセージ</string>
    <string name="msg_title3">確認</string>

    <string name="msg_return1">はい</string>
    <string name="msg_return2">いいえ</string>

    <string name="lab_Amount">支払金額</string>
    <string name="cancel_lab_Amount">返金金額</string>
    <string name="cancel_lab_customId">取引コード情報</string>
    <string name="lab_customId">取引カード情報</string>

    <string name="button_on">スキャンー</string>
    <string name="button_seed">支払</string>
    <string name="button_cancel">返金</string>
    <string name="button_clear">クリア</string>

    <string name="lab_shopTel">電話:</string>
    <string name="lab_payDetail_kbn">処理状態:</string>
    <string name="lab_payDetail_compang">支払会社:</string>
    <string name="lab_payDetail_amount">支払金額:</string>
    <string name="lab_payCancel_amount">返済金額:</string>
    <string name="lab_payDetail_userId">担当番号:</string>
    <string name="lab_payDetail_orderId">取引番号:</string>
    <string name="lab_payDetail_deviceId">処理端末:</string>
    <string name="lab_payDetail_dateTime">処理時刻:</string>

    <string name="lab_payDetail_kbn_value1">支払成功</string>
    <string name="lab_payDetail_kbn_value2">返金成功</string>
    <string name="lab_payDetail_kbn_value3">支払完了</string>
    <string name="lab_payDetail_kbn_value4">返金完了</string>

    <string name="button_print">印刷</string>
    <string name="button_end">戻る</string>

    <!--http://192.168.31.209:2000 -->
    <!--https://msp.mapps.co.jp:8443 -->

    <string name="msp_login_url">https://msp.mapps.co.jp:8443/msp/LoginApi/PostLoginProcess</string>
    <string name="msp_pay_url">https://msp.mapps.co.jp:8443/msp/PaymentApi/PostPaymentProcess</string>
    <string name="msp_pay_ist_url">https://msp.mapps.co.jp:8443/msp/SearchApi/PostSearchTradeProcess</string>

    <string name="msg0001">ユーザーID</string>
    <string name="msg0002">パスワード</string>
    <string name="msg0003">異常終了しました、管理者に連絡してください。</string>
    <string name="msg0004">デバイスIDを取得する際に失敗しました。</string>
    <string name="msg0005">デバイスIDが取得できません。</string>
    <string name="msg0006">金額を入力してください</string>
    <string name="msg0007">先に金額を入力ください。</string>
    <string name="msg0008">先に取引カード情報をスキャンください。</string>

    <string name="msg0009">コードを入力してください</string>
    <string name="msg0010">データが有りません。</string>
    <string name="msg0011">ログアウトしてよろしいでしょうか</string>

    <string name="msg0012">送信しました。少々お待ちください。</string>
    <string name="msg0013">ユーザーIDを入力してください。</string>
    <string name="msg0014">パスワードを入力してください。</string>

    <string name="msg0015">送信処理が異常発生しました。</string>
    <string name="msg0016">送信結果JSONの処理が異常終了しました。</string>
    <string name="msg0017">…</string>

    <string name="msg0018">先に取引コード情報をスキャンください。</string>
    <string name="msg0019">デジタル署名のチェックが失敗しました。</string>
    <string name="msg0020">有効のコードではありません。</string>
    <string name="msg0021">ログインの有効期限が切れていますので、再ログインしてください。</string>

    <string name="msg0022">返金済のデータので、返金処理ができません。</string>
    <string name="msg0023">…</string>

    <string name="msg0024">送信処理のResponseCodeは200以外になっています。</string>

    <!--instruction Sunmi Print start -->
    <string name="toast_1">Transaction print,use the AIDL mode!</string>
    <string name="toast_2">The service has been disconnected!</string>
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="toast_7"> Only a single Qr code is printed for the AIDL mode</string>
    <string name="toast_8">Now QrCode size must be less than 7!</string>
    <string name="toast_9">BarCode type or conent error!</string>
    <!--instruction Sunmi Print end -->

    <string name="muroo_key_str0">0</string>
    <string name="muroo_key_str1">1</string>
    <string name="muroo_key_str2">2</string>
    <string name="muroo_key_str3">3</string>
    <string name="muroo_key_str4">4</string>
    <string name="muroo_key_str5">5</string>
    <string name="muroo_key_str6">6</string>
    <string name="muroo_key_str7">7</string>
    <string name="muroo_key_str8">8</string>
    <string name="muroo_key_str9">9</string>

    <string name="muroo_key_str00">00</string>
    <string name="muroo_key_str_bs">🔙</string>
    <string name="muroo_key_str_ac">AC</string>
    <string name="muroo_key_str_et">Scan</string>

    <string name="muroo_list_str1">画面を引き下げて...</string>
    <string name="muroo_list_str2">指を離すと再検索...</string>
    <string name="muroo_list_str3">検索中...</string>
    <string name="muroo_list_str4">...</string>

    <string name="muroo_list_str5">指を離すともっと表示...</string>
    <string name="muroo_list_str6">全部データは表示しました</string>
    <string name="muroo_list_str7">読み込み処理が失敗しました</string>
    <string name="muroo_list_str8">読み込み中...</string>
    <string name="muroo_list_str9">...</string>

</resources>
