<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">


    <TextView
        android:id="@+id/textViewShopNm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="店舗名"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewShopInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="会社情報"
        android:textAlignment="textStart"
        android:textSize="@dimen/font_size1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewShopNm" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lab_shopTel"
        android:textSize="@dimen/font_size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewShopInfo" />

    <TextView
        android:id="@+id/textViewShopTel"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/lab_payDetail_dateTime"
        android:textSize="@dimen/font_size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewPayDateTime"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
        app:layout_constraintStart_toEndOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/lab_payDetail_deviceId"
        android:textSize="@dimen/font_size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textViewPayDeviceId"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/lab_payDetail_orderId"
        android:textSize="@dimen/font_size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textViewPayOrderId"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/lab_payDetail_userId"
        android:textSize="@dimen/font_size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView122" />

    <TextView
        android:id="@+id/textViewPayUserId"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/lab_payDetail_amount"
        android:textSize="@dimen/font_size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textViewPayAmount"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView122"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/lab_payCancel_amount"
        android:textSize="@dimen/font_size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textViewPayCancelAmount"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView122"
        app:layout_constraintStart_toEndOf="@+id/textView122" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/lab_payDetail_compang"
        android:textSize="@dimen/font_size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKbn" />

    <TextView
        android:id="@+id/textViewPayCompany"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/textViewKbn"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/lab_payDetail_kbn"
        android:textSize="@dimen/font_size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewPayKbn"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewKbn"
        app:layout_constraintStart_toEndOf="@+id/textViewKbn" />

    <Button
        android:id="@+id/buttonPayEnd"
        android:layout_width="110dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_msp"
        android:onClick="endClick"
        android:text="@string/button_end"
        android:textSize="@dimen/font_size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <Button
        android:id="@+id/buttonPayPrint"
        android:layout_width="110dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_msp"
        android:onClick="printClick"
        android:text="@string/button_print"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonPayEnd"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/buttonPayEnd" />

    <Button
        android:id="@+id/buttonPayCancel"
        android:layout_width="110dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_msp"
        android:onClick="cancelClick"
        android:text="@string/button_cancel"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonPayPrint"
        app:layout_constraintStart_toEndOf="@+id/buttonPayPrint" />

</android.support.constraint.ConstraintLayout>