<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MenuBtnsActivity">

    <TextView
        android:id="@+id/txt_MainMenuInfo"
        android:layout_width="340dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_menu_4"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_msp"
        android:onClick="menuBtnClick"
        android:text="@string/menu_name4"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_menu_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_menu_3" />

    <Button
        android:id="@+id/btn_menu_3"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/button_msp"
        android:onClick="menuBtnClick"
        android:text="@string/menu_name2"
        android:textSize="@dimen/font_size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_1" />

    <Button
        android:id="@+id/btn_menu_2"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_msp"
        android:onClick="menuBtnClick"
        android:text="@string/menu_name3"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_menu_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_menu_1" />

    <Button
        android:id="@+id/btn_menu_1"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_msp"
        android:onClick="menuBtnClick"
        android:text="@string/menu_name1"
        android:textSize="@dimen/font_size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>