<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PayActivity">

    <EditText
        android:id="@+id/txtPayCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fadeScrollbars="true"
        android:hint="@string/msg0009"
        android:inputType="text"
        android:maxLength="32"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBottom_toTopOf="@+id/txtUserInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtUserInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/font_size1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSeed"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/msg0006"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="textStart"
        android:textSize="@dimen/font_size1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <jp.co.muroo.systems.bsp.contents.MurooKeyView
        android:id="@+id/muroo_key_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txtPayCode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAmount" />

    <Button
        android:id="@+id/btnSeed"
        android:layout_width="74dp"
        android:layout_height="34dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:onClick="seed"
        android:text="@string/button_seed"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!--
    <RelativeLayout
        android:id="@+id/page2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible">
        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:background="#000000" />
    </RelativeLayout>
    -->


</android.support.constraint.ConstraintLayout>